# podcast-by-sphinx

./: Taskfile.yaml  hello.py  pyproject.toml
.github/workflows/: deploy-site.yaml
contents/: conf.py  index.rst
contents/episodes/: index.rst
contents/episodes/test/: index.rst
source/: index.rst
src/podcast_demo/: __init__.py  models.py  processors.py
