[project]
name = "demo-podcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atsphinx-audioplayer>=0.2.0",
    "furo>=2024.8.6",
    "rst-package-refs>=0.1.0",
    "sphinx>=8.1.3",
]

[tool.uv]
dev-dependencies = [
    "esbonio>=0.16.5",
]
